--- a/index.html
+++ b/index.html
@@ -5,207 +5,302 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Rumi Cafe Menu</title>
 
-  <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@700;900&family=EB+Garamond:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@600;700&family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="style.css" />
 </head>
-
 <body>
-  <main class="menu" id="menuRoot" aria-label="Rumi Cafe Menu">
-
-    <!-- Corner ornaments -->
-    <svg class="corner tl" viewBox="0 0 120 120" aria-hidden="true">
-      <path fill="#d7a94e" d="M12 88c22-6 30-22 34-36 6-22 20-32 36-36 10-2 18 0 24 6 6 6 8 14 6 24-4 16-14 30-36 36-14 4-30 12-36 34H12V88zm20 6c8-18 22-26 38-30 18-5 26-14 30-28 2-8 1-14-3-18-4-4-10-5-18-3-14 4-23 12-28 30-4 16-12 30-30 38h11z"/>
-      <path fill="#d7a94e" d="M22 98c10-4 18-10 24-18 6-8 8-18 6-28 10 0 18 2 24 8-6 14-18 26-36 30-6 2-12 4-18 8v0z" opacity=".85"/>
-    </svg>
-    <svg class="corner tr" viewBox="0 0 120 120" aria-hidden="true">
-      <path fill="#d7a94e" d="M12 88c22-6 30-22 34-36 6-22 20-32 36-36 10-2 18 0 24 6 6 6 8 14 6 24-4 16-14 30-36 36-14 4-30 12-36 34H12V88zm20 6c8-18 22-26 38-30 18-5 26-14 30-28 2-8 1-14-3-18-4-4-10-5-18-3-14 4-23 12-28 30-4 16-12 30-30 38h11z"/>
-      <path fill="#d7a94e" d="M22 98c10-4 18-10 24-18 6-8 8-18 6-28 10 0 18 2 24 8-6 14-18 26-36 30-6 2-12 4-18 8v0z" opacity=".85"/>
-    </svg>
-    <svg class="corner br" viewBox="0 0 120 120" aria-hidden="true">
-      <path fill="#d7a94e" d="M12 88c22-6 30-22 34-36 6-22 20-32 36-36 10-2 18 0 24 6 6 6 8 14 6 24-4 16-14 30-36 36-14 4-30 12-36 34H12V88zm20 6c8-18 22-26 38-30 18-5 26-14 30-28 2-8 1-14-3-18-4-4-10-5-18-3-14 4-23 12-28 30-4 16-12 30-30 38h11z"/>
-      <path fill="#d7a94e" d="M22 98c10-4 18-10 24-18 6-8 8-18 6-28 10 0 18 2 24 8-6 14-18 26-36 30-6 2-12 4-18 8v0z" opacity=".85"/>
-    </svg>
-    <svg class="corner bl" viewBox="0 0 120 120" aria-hidden="true">
-      <path fill="#d7a94e" d="M12 88c22-6 30-22 34-36 6-22 20-32 36-36 10-2 18 0 24 6 6 6 8 14 6 24-4 16-14 30-36 36-14 4-30 12-36 34H12V88zm20 6c8-18 22-26 38-30 18-5 26-14 30-28 2-8 1-14-3-18-4-4-10-5-18-3-14 4-23 12-28 30-4 16-12 30-30 38h11z"/>
-      <path fill="#d7a94e" d="M22 98c10-4 18-10 24-18 6-8 8-18 6-28 10 0 18 2 24 8-6 14-18 26-36 30-6 2-12 4-18 8v0z" opacity=".85"/>
-    </svg>
-
-    <header class="top">
-      <h1 class="gold" id="menuTitle">Rumi Cafe Menu</h1>
-
-      <div class="actions">
-        <a class="wa-btn" href="https://wa.me/96898183175" target="_blank" rel="noopener">
-          Order on WhatsApp • +968 9818 3175
-        </a>
-        <div class="currency-note">All prices in <b>OMR</b></div>
+  <main class="page">
+    <header class="header">
+      <div class="brand">
+        <h1 class="title">Rumi Cafe</h1>
+        <p class="subtitle">Select items • Send order on WhatsApp</p>
       </div>
 
-      <nav class="jump" id="jumpNav" aria-label="Menu Categories"></nav>
+      <div class="header-actions">
+        <span class="chip">All prices in <b>OMR</b></span>
+        <a class="chip chip-wa" href="https://wa.me/96898183175" target="_blank" rel="noopener">
+          WhatsApp: +968 9818 3175
+        </a>
+      </div>
     </header>
 
-    <div id="menuContent"></div>
-
-    <section class="portfolio" id="portfolio">
-      <h2 class="portfolio-title gold">Product Portfolio</h2>
-      <p class="portfolio-sub">Add photos for your items — this becomes your “next level” menu gallery.</p>
-
-      <div class="gallery" id="gallery"></div>
-    </section>
-
-    <!-- Image modal -->
-    <div class="modal" id="modal" aria-hidden="true">
-      <div class="modal-backdrop" id="modalClose"></div>
-      <div class="modal-card" role="dialog" aria-modal="true" aria-label="Image preview">
-        <img id="modalImg" alt="" />
-        <div class="modal-meta">
-          <div class="modal-name" id="modalName"></div>
-          <div class="modal-desc" id="modalDesc"></div>
-          <a class="modal-wa" id="modalWa" href="https://wa.me/96898183175" target="_blank" rel="noopener">
-            Order on WhatsApp
-          </a>
+    <section class="layout">
+      <!-- MENU -->
+      <section class="card">
+        <div class="card-head">
+          <h2>Menu</h2>
+          <div class="search">
+            <input id="searchInput" type="search" placeholder="Search items (e.g., burger, shake)..." />
+          </div>
         </div>
-      </div>
-    </div>
 
+        <div id="menuRoot" class="menu"></div>
+      </section>
+
+      <!-- ORDER -->
+      <aside class="card order">
+        <div class="card-head">
+          <h2>Your Order</h2>
+          <button id="clearBtn" class="btn btn-ghost" type="button">Clear</button>
+        </div>
+
+        <div id="orderList" class="order-list">
+          <p class="muted">No items selected yet.</p>
+        </div>
+
+        <div class="totals">
+          <div class="row">
+            <span class="muted">Items</span>
+            <b id="itemsCount">0</b>
+          </div>
+          <div class="row">
+            <span class="muted">Total</span>
+            <b><span id="totalValue">0.00</span> OMR</b>
+          </div>
+        </div>
+
+        <div class="notes">
+          <label for="notesInput" class="muted">Notes (optional)</label>
+          <textarea id="notesInput" rows="3" placeholder="E.g., no onions, extra sauce..."></textarea>
+        </div>
+
+        <button id="whatsAppBtn" class="btn btn-primary" type="button">
+          Send Order on WhatsApp
+        </button>
+
+        <p class="hint">
+          Tip: After WhatsApp opens, press <b>Send</b>.
+        </p>
+      </aside>
+    </section>
   </main>
 
   <script src="menu-data.js"></script>
   <script>
-    // ---------- Helpers ----------
-    const root = document.getElementById("menuContent");
-    const jumpNav = document.getElementById("jumpNav");
-    const gallery = document.getElementById("gallery");
+    // ===== Config =====
+    const WHATSAPP_NUMBER = "96898183175";
 
-    function slug(s){
-      return String(s).toLowerCase().replace(/[^a-z0-9]+/g,"-").replace(/(^-|-$)/g,"");
+    // ===== State =====
+    const selected = new Map(); // key -> {name, price, qty}
+    const menuRoot = document.getElementById("menuRoot");
+    const orderList = document.getElementById("orderList");
+    const itemsCount = document.getElementById("itemsCount");
+    const totalValue = document.getElementById("totalValue");
+    const notesInput = document.getElementById("notesInput");
+    const searchInput = document.getElementById("searchInput");
+
+    function money(n){
+      const x = Number(n || 0);
+      return x.toFixed(2);
+    }
+    function keyOf(sectionTitle, itemName){
+      return `${sectionTitle}::${itemName}`;
     }
 
-    function sectionHeader(title, id){
-      return `
-        <div class="section-title gold" id="${id}">
-          <span class="rule"></span><span class="flourish"></span>
-          <span>${title}</span>
-          <span class="flourish"></span><span class="rule"></span>
-        </div>
-      `;
-    }
+    // ===== Render Menu =====
+    function renderMenu(filterText = ""){
+      const q = filterText.trim().toLowerCase();
 
-    function itemCard(item){
-      const descHtml = (item.desc || "").replaceAll("\n", "<br>");
-      return `
-        <article class="item">
-          <div>
-            <h3 class="name gold">${item.name}</h3>
-            ${item.desc ? `<p class="desc">${descHtml}</p>` : ``}
+      let html = "";
+      for (const sec of MENU.sections){
+        // Filter section items
+        const items = sec.items.filter(it => {
+          if (!q) return true;
+          return (
+            (it.name || "").toLowerCase().includes(q) ||
+            (it.desc || "").toLowerCase().includes(q) ||
+            (sec.title || "").toLowerCase().includes(q)
+          );
+        });
+
+        if (items.length === 0) continue;
+
+        html += `
+          <div class="section">
+            <div class="section-title">
+              <h3>${sec.title}</h3>
+            </div>
+            <div class="items">
+              ${items.map(it => renderItem(sec.title, it)).join("")}
+            </div>
           </div>
-          <div class="price gold">${item.price}<span class="omr">OMR</span></div>
-        </article>
-      `;
-    }
-
-    function buildWhatsAppText(item){
-      const msg = `Hello Rumi Cafe, I want to order: ${item.name} (${item.price} OMR).`;
-      return "https://wa.me/96898183175?text=" + encodeURIComponent(msg);
-    }
-
-    // ---------- Render Menu ----------
-    document.getElementById("menuTitle").innerHTML = MENU.title;
-
-    let html = "";
-    let navHtml = "";
-
-    for (const sec of MENU.sections){
-      const id = slug(sec.title);
-      navHtml += `<a class="jump-link" href="#${id}">${sec.title}</a>`;
-
-      html += sectionHeader(sec.title, id);
-      html += `<section class="items">`;
-      for (const it of sec.items) html += itemCard(it);
-      html += `</section><div class="spacer"></div>`;
-    }
-
-    root.innerHTML = html;
-    jumpNav.innerHTML = navHtml;
-
-    // ---------- Portfolio / Gallery ----------
-    // Shows only items that have an "img" field in menu-data.js
-    const galleryItems = [];
-    for (const sec of MENU.sections){
-      for (const it of sec.items){
-        if (it.img) galleryItems.push(it);
+        `;
       }
+
+      menuRoot.innerHTML = html || `<p class="muted">No results found.</p>`;
+      syncMenuChecks(); // keep checkboxes in sync after rerender
     }
 
-    if (galleryItems.length === 0){
-      gallery.innerHTML = `
-        <div class="gallery-empty">
-          No photos added yet. To enable portfolio images:
-          <br><br>
-          1) Create folder: <b>images/</b> in your repo
-          <br>
-          2) Upload your food photos inside it
-          <br>
-          3) In <b>menu-data.js</b>, add: <b>img: "images/yourphoto.jpg"</b> for each item
+    function renderItem(sectionTitle, item){
+      const k = keyOf(sectionTitle, item.name);
+      const isSelected = selected.has(k);
+      const qty = isSelected ? selected.get(k).qty : 1;
+
+      return `
+        <div class="item" data-key="${k}">
+          <label class="check">
+            <input type="checkbox" class="pick" ${isSelected ? "checked" : ""} />
+            <span class="checkmark"></span>
+          </label>
+
+          <div class="info">
+            <div class="topline">
+              <div class="name">${item.name}</div>
+              <div class="price">${item.price} <span class="omr">OMR</span></div>
+            </div>
+            ${item.desc ? `<div class="desc">${item.desc}</div>` : ""}
+            <div class="controls">
+              <button class="qty-btn" data-action="dec" type="button" ${isSelected ? "" : "disabled"}>-</button>
+              <span class="qty">${qty}</span>
+              <button class="qty-btn" data-action="inc" type="button" ${isSelected ? "" : "disabled"}>+</button>
+            </div>
+          </div>
         </div>
       `;
-    } else {
-      gallery.innerHTML = galleryItems.map(it => `
-        <button class="card" data-name="${it.name}" data-desc="${it.desc || ""}" data-img="${it.img}" data-wa="${buildWhatsAppText(it)}">
-          <div class="card-imgwrap">
-            <img src="${it.img}" alt="${it.name}">
-          </div>
-          <div class="card-body">
-            <div class="card-name gold">${it.name}</div>
-            <div class="card-price gold">${it.price}<span class="omr">OMR</span></div>
-          </div>
-        </button>
-      `).join("");
     }
 
-    // ---------- Modal logic ----------
-    const modal = document.getElementById("modal");
-    const modalImg = document.getElementById("modalImg");
-    const modalName = document.getElementById("modalName");
-    const modalDesc = document.getElementById("modalDesc");
-    const modalWa = document.getElementById("modalWa");
-    const modalClose = document.getElementById("modalClose");
+    function syncMenuChecks(){
+      document.querySelectorAll(".item").forEach(row => {
+        const k = row.getAttribute("data-key");
+        const picked = row.querySelector(".pick");
+        const dec = row.querySelector('[data-action="dec"]');
+        const inc = row.querySelector('[data-action="inc"]');
+        const qtyEl = row.querySelector(".qty");
 
-    function openModal({name, desc, img, wa}){
-      modalImg.src = img;
-      modalImg.alt = name;
-      modalName.textContent = name;
-      modalDesc.textContent = desc;
-      modalWa.href = wa;
+        const isSelected = selected.has(k);
+        picked.checked = isSelected;
+        dec.disabled = !isSelected;
+        inc.disabled = !isSelected;
 
-      modal.classList.add("open");
-      modal.setAttribute("aria-hidden","false");
-      document.body.style.overflow = "hidden";
-    }
-
-    function closeModal(){
-      modal.classList.remove("open");
-      modal.setAttribute("aria-hidden","true");
-      document.body.style.overflow = "";
-      modalImg.src = "";
-    }
-
-    gallery.addEventListener("click", (e) => {
-      const btn = e.target.closest(".card");
-      if (!btn) return;
-      openModal({
-        name: btn.dataset.name,
-        desc: btn.dataset.desc,
-        img: btn.dataset.img,
-        wa: btn.dataset.wa
+        qtyEl.textContent = isSelected ? selected.get(k).qty : 1;
       });
+    }
+
+    // ===== Order Summary =====
+    function renderOrder(){
+      const entries = Array.from(selected.values());
+
+      if (entries.length === 0){
+        orderList.innerHTML = `<p class="muted">No items selected yet.</p>`;
+        itemsCount.textContent = "0";
+        totalValue.textContent = "0.00";
+        return;
+      }
+
+      let totalItems = 0;
+      let total = 0;
+
+      const lines = entries.map(e => {
+        const lineTotal = Number(e.price) * e.qty;
+        totalItems += e.qty;
+        total += lineTotal;
+
+        return `
+          <div class="order-line">
+            <div class="ol-left">
+              <div class="ol-name">${e.name}</div>
+              <div class="ol-meta muted">${e.qty} × ${money(e.price)} OMR</div>
+            </div>
+            <div class="ol-right"><b>${money(lineTotal)}</b> <span class="muted">OMR</span></div>
+          </div>
+        `;
+      }).join("");
+
+      orderList.innerHTML = lines;
+      itemsCount.textContent = String(totalItems);
+      totalValue.textContent = money(total);
+    }
+
+    // ===== Find item from MENU by key =====
+    function getItemByKey(k){
+      const [secTitle, itemName] = k.split("::");
+      const sec = MENU.sections.find(s => s.title === secTitle);
+      if (!sec) return null;
+      const it = sec.items.find(i => i.name === itemName);
+      if (!it) return null;
+      return it;
+    }
+
+    // ===== Events =====
+    menuRoot.addEventListener("click", (e) => {
+      const row = e.target.closest(".item");
+      if (!row) return;
+      const k = row.getAttribute("data-key");
+      const item = getItemByKey(k);
+      if (!item) return;
+
+      // Checkbox toggle
+      if (e.target.classList.contains("pick") || e.target.closest(".check")){
+        const checked = row.querySelector(".pick").checked;
+        if (checked){
+          selected.set(k, { name: item.name, price: item.price, qty: 1 });
+        } else {
+          selected.delete(k);
+        }
+        syncMenuChecks();
+        renderOrder();
+        return;
+      }
+
+      // Qty buttons
+      if (e.target.classList.contains("qty-btn")){
+        if (!selected.has(k)) return;
+        const action = e.target.getAttribute("data-action");
+        const entry = selected.get(k);
+
+        if (action === "inc") entry.qty += 1;
+        if (action === "dec") entry.qty = Math.max(1, entry.qty - 1);
+
+        selected.set(k, entry);
+        syncMenuChecks();
+        renderOrder();
+      }
     });
 
-    modalClose.addEventListener("click", closeModal);
-    window.addEventListener("keydown", (e) => { if (e.key === "Escape") closeModal(); });
+    document.getElementById("clearBtn").addEventListener("click", () => {
+      selected.clear();
+      notesInput.value = "";
+      renderMenu(searchInput.value);
+      renderOrder();
+    });
+
+    searchInput.addEventListener("input", () => {
+      renderMenu(searchInput.value);
+    });
+
+    document.getElementById("whatsAppBtn").addEventListener("click", () => {
+      if (selected.size === 0){
+        alert("Please select at least one item.");
+        return;
+      }
+
+      // Build message
+      let msg = "Hello Rumi Cafe, I want to order:%0A";
+      let total = 0;
+
+      for (const e of selected.values()){
+        const lineTotal = Number(e.price) * e.qty;
+        total += lineTotal;
+        msg += `• ${e.name} — ${e.qty} × ${money(e.price)} OMR = ${money(lineTotal)} OMR%0A`;
+      }
+
+      msg += `%0ATotal: ${money(total)} OMR`;
+
+      const notes = notesInput.value.trim();
+      if (notes){
+        msg += `%0A%0ANotes: ${encodeURIComponent(notes)}`;
+      }
+
+      const url = `https://wa.me/${WHATSAPP_NUMBER}?text=${msg}`;
+      window.open(url, "_blank", "noopener");
+    });
+
+    // ===== Init =====
+    renderMenu("");
+    renderOrder();
   </script>
 </body>
 </html>
